--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/meme"]
 	path = themes/meme
 	url = https://github.com/reuixiy/hugo-theme-meme.git
+[submodule "public"]
+	path = public
+	url = https://github.com/hcaijin/hcaijin.github.io
+	branch = master
